docs/v3.2.0/rtd/_sources/pages/resources.rst.txt
=========
Resources
=========

This page contains a series of community-contributed resources that can be found over the web.
Found, written or recorded a contribution? Feel free to contribute it via de pull request on Github.

Notebooks
---------

- Google Cloud Platform: `Building a propensity model for financial services on Google Cloud <https://cloud.google.com/solutions/building-a-propensity-model-for-financial-services-on-gcp>`_
- Kaggle: `Notebooks using pandas-profiling <https://www.kaggle.com/search?q=%22pandas-profiling%22+kernelLanguage%3APython>`_ (30+ notebooks)
- Pycaret: `Intermediate Level Tutorials include pandas-profiling <https://github.com/pycaret/pycaret>`_

Articles
--------
- `Generate Reports Using Pandas Profiling, Deploy Using Streamlit <https://www.analyticsvidhya.com/blog/2021/06/generate-reports-using-pandas-profiling-deploy-using-streamlit/>`_ (Kaustubh Gupta, June 25, 2021)
- `Bringing Customization to Pandas Profiling <https://medium.com/@ianeaves/customizing-pandas-profiling-summaries-b16714d0dac9>`_ (Ian Eaves, March 5, 2021)
- `Beginner Friendly Data Science Projects Accepting Contributions <https://towardsdatascience.com/beginner-friendly-data-science-projects-accepting-contributions-3b8e26f7e88e>`_ (Adam Ross Nelson, January 18, 2021)
- `Pandas profiling and exploratory data analysis with line one of code! <https://towardsdatascience.com/pandas-profiling-and-exploratory-data-analysis-with-line-one-of-code-423111991e58>`_ (Magdalena Konkiewicz, Jun 10, 2020)
- `The Covid 19 health issue <https://concillier.squarespace.com/datasets/covid-19>`_ (Concillier Kitungulu, April 20, 2020)
- `Accelerate Your Exploratory Data Analysis With Pandas-Profiling <https://towardsdatascience.com/accelerate-your-exploratory-data-analysis-with-pandas-profiling-4eca0cb770d1>`_ (Sukanta Roy, April 19, 2020)
- `Pandas-Profiling, explore your data faster in Python <https://www.datacourses.com/pandas-1150/>`_ (Gabriel Fuhr, May 31, 2020)
- `Pandas One Line Magical Code for EDA: Pandas Profile Report <https://dzone.com/articles/pandas-one-line-magical-code-for-eda-pandas-profil>`_ (Sunil Kappal, July 8, 2019)
- `Speed Up Your Exploratory Data Analysis With Pandas-Profiling <https://towardsdatascience.com/speed-up-your-exploratory-data-analysis-with-pandas-profiling-88b33dc53625>`_ (Lukas Frei, April 26, 2019)
- `Pandas Exploratory Data Analysis: Data Profiling with one single command <https://kanoki.org/2019/01/15/pandas-exploratory-data-analysis-data-profiling/>`_ (Vinay Babu, January 15, 2019)
- `Data Profiling with pandas-profiling <https://www.leehonan.com/data-profiling-with-pandas-profiling/>`_ (Lee Honan, October 28, 2018)
- `3 Must-have tools if you're serious about machine learning <https://fizzylogic.nl/2018/08/21/5-must-have-tools-if-youre-serious-about-machine-learning/>`_ (Willem Meints, August 21, 2018)
- `Exploratory Data Analysis of Craft Beers: Data Profiling <https://www.datacamp.com/community/tutorials/python-data-profiling>`_ (Jean-Nicholas Hould, April 13, 2017)

Videos
------
- `Installing Anaconda, Creating a virtual environment and installing pandas-profiling in it <https://www.youtube.com/watch?v=q2E8RLsznaA>`_
  (Abhiram R - EverythingPython, Jan 25, 2022)

- `How to Install and Use Pandas Profiling on Google Colab <https://www.youtube.com/watch?v=pLxgt20kKWU>`_
  (Chanin Nantasenamat, Apr 25, 2020)

- `Data Exploration in Python with Just one line of code | Python Tutorial <https://www.youtube.com/watch?v=oSTOcqcI9n0>`_
  (Abhishek Agarrwal, Nov 7, 2019)

- `Pandas Profiling Correlations | pythonbeginner 2019 <https://www.youtube.com/watch?v=0BzIY4_Ftlo>`_ (August 5, 2019)

- `Automated Data Profiling using Python Pandas (pandas-profiling) <https://www.youtube.com/watch?v=vsL8osE_0HM>`_
  (Kunaal Naik, Oct 14, 2019)

- `Data Science Tools - Data Profiling with Pandas (Simple Exploratory Data Analysis) <https://www.youtube.com/watch?v=C7cmeEvUDfo>`_
  (Jesse E. Agbe, Jun 20, 2019)

- `Exploratory data analysis in python - PyCon 2017 <https://www.youtube.com/watch?v=W5WE9Db2RLU>`_ (Chloe Mawer, Jonathan Whitmore, May 18, 2017)

Books
-----

.. image:: https://learning.oreilly.com/library/cover/9781492047537/250w/

- `Machine Learning Pocket Reference <https://www.oreilly.com/library/view/machine-learning-pocket/9781492047537/>`_ by Matt Harrison, August 2019, ISBN: 9781492047544

.. image:: https://static.packt-cdn.com/products/9781789537864/cover/smaller

- `Python Data Science Essentials <https://www.packtpub.com/product/python-data-science-essentials-third-edition/9781789537864>`_ by Alberto Boschetti and Luca Massaron, September 2018, ISBN: 9781789537864

Miscellaneous
-------------

- `Penn Machine Learning Benchmarks (PMLB) <https://epistasislab.github.io/pmlb/>`_ (`description <https://arxiv.org/ftp/arxiv/papers/2012/2012.00058.pdf>`_)
- `dabl package <https://github.com/dabl/dabl>`_
